Persistencia e utilizacao da biblioteca otto.Bus

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.MainActivity" android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar.NavDrawer">
 
         </activity>
